# game-site-scraper

./: .gitignore  Cargo.toml  README.md  scrape.toml
src/: cli.rs  config.rs  fs.rs  main.rs  model.rs
src/parser/: mod.rs  release_page.rs  util.rs
