[package]
name = "game-scraper"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.65"
hex = "0.4.3"
once_cell = "1.21.3"
regex = "1.12.2"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.10.9"
thiserror = "2.0.18"
toml = "0.9.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
walkdir = "2.5.0"
